# aequitas

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
analysis/: plot_run.py
cmake/: aequitas_version.h.in  deps.cmake  shaders.cmake  version.cmake
docs/: ARCHITECTURE.md  DEVLOG.md  GAMEPLAY.md
releases/: README.md
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  package-release.ps1  package-release.sh
shaders/: fullscreen.vert  lit.frag  lit.vert  ssao.frag  ssao_blur.frag  ssao_composite.frag
src/app/: headless_main.cpp  main.cpp
src/render/: camera.cpp  camera.h  mesh.cpp  mesh.h  meshgen.cpp  meshgen.h  pipeline.cpp  pipeline.h  postfx.cpp  postfx.h  renderer.cpp  renderer.h  vk_context.cpp  vk_context.h
src/sim/: agent.cpp  agent.h  hex.h  market.cpp  market.h  order_book.cpp  order_book.h  params.h  rng.h  simulation.cpp  simulation.h  telemetry.cpp  telemetry.h  world.cpp  world.h
src/ui/: hud.cpp  hud.h
tests/: test_conservation.cpp  test_determinism.cpp  test_order_book.cpp  test_parity.cpp
tools/: AequitasHome.bat  AequitasHome.command  AequitasHome.sh  README.md  build-linux.sh  build-macos.sh  build-windows.ps1  homebase.py
